improve spacing on third screen, change title image, fix exit icon on artist page

--- a/assets/styles/artist.scss
+++ b/assets/styles/artist.scss
@@ -321,6 +321,7 @@ h1, h2, h3{
             width: 100%;
             right: 0;
             bottom: 5%;
+            margin-top: 150px;
             ul{
                 list-style-type: none;
                 text-align: center;
@@ -462,20 +463,19 @@ h1, h2, h3{
             }
         }
         .exit{
-            position: fixed;
-            top: 0;
-            right: 0;
-            font-size: 2em;
-            padding-right: 10px;
-            padding-left: 10px;
-            background-color: white;
-            color: black;
-            border: 2px solid black;
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 60px;
+            height: 60px;
+            max-width: 60px;
+            max-height: 60px;
+            background: url(../../images/close.gif) no-repeat center center;
+            background-size: 100%;
             z-index: 9999;
             &:hover{
-                background-color: black;
-                color: white;
-                
+                background: url(../../images/close-black.gif) no-repeat center center;
+                background-size: 100%;
             }
         }
     }
@@ -630,6 +630,7 @@ h1, h2, h3{
             width: 100%;
             right: 0;
             bottom: 5%;
+            margin-top: 75px;
             ul{
                 list-style-type: none;
                 text-align: center;
@@ -656,10 +657,10 @@ h1, h2, h3{
             position: absolute;
             top: 20px;
             left: 20px;
-            width: 30px;
-            height: 30px;
-            max-width: 30px;
-            max-height: 30px;
+            width: 40px;
+            height: 40px;
+            max-width: 40px;
+            max-height: 40px;
             background: url(../../images/close.gif) no-repeat center center;
             background-size: 100%;
             z-index: 9999;
@@ -806,6 +807,7 @@ h1, h2, h3{
             width: 100%;
             right: 0;
             bottom: 5%;
+            margin-top: 50px;
             ul{
                 list-style-type: none;
                 text-align: left;
@@ -832,10 +834,10 @@ h1, h2, h3{
             position: absolute;
             top: 20px;
             left: 20px;
-            width: 30px;
-            height: 30px;
-            max-width: 30px;
-            max-height: 30px;
+            width: 40px;
+            height: 40px;
+            max-width: 40px;
+            max-height: 40px;
             background: url(../../images/close.gif) no-repeat center center;
             background-size: 100%;
             z-index: 9999;
