--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -627,7 +627,7 @@ textarea {
 
             h2{
                 font-family: 'Rail';
-                font-size: 4em;
+                font-size: 3.5em;
                 color: white;
                 margin-top: 0;
                 margin-bottom: 30px;
@@ -652,7 +652,7 @@ textarea {
 
             .city-box{
                 width: 80%;
-                margin: 0 10% 60px 10%;
+                margin: 0 10% 0 10%;
 
             }
 
@@ -677,7 +677,7 @@ textarea {
                 }
             }
             .digital-section{
-                margin-top: 10%;
+                margin-top: 7%;
                .digital-box{
                     margin: 0 auto 60px auto;
                     .digital{
@@ -695,7 +695,7 @@ textarea {
             .artist-bank{
                 div{
                     background-color: black;
-                    margin-top: 20%;
+                    margin-top: 7%;
                     margin-bottom: 20%;
                     .featured-artists{
                         width: 60%;
@@ -993,7 +993,7 @@ textarea {
                 font-family: 'Rail', helvetica, sans-serif;
                 text-transform: uppercase;
                 font-weight: 100;
-                font-size: 2.5em;
+                font-size: 2em;
                 
                 a{
                     color: white;
@@ -1004,12 +1004,12 @@ textarea {
 
             h2{
                 font-family: 'Rail';
-                font-size: 4em;
+                font-size: 3.2em;
                 color: white;
                 margin-top: 0;
                 margin-bottom: 30px;
                 padding: 0;
-                line-height: 0.6;
+                line-height: 0.5;
                 &.featured-artists{
                     line-height: 1;
                     padding: 5px;
@@ -1031,7 +1031,7 @@ textarea {
 
             .city-box{
                 width: 80%;
-                margin: 0 10% 60px 10%;
+                margin: 0 10% 0 10%;
 
             }
 
@@ -1056,7 +1056,7 @@ textarea {
                 }
             }
             .digital-section{
-                margin-top: 10%;
+                margin-top: 7%;
                .digital-box{
                     margin: 0 auto 60px auto;
                     .digital{
@@ -1073,13 +1073,13 @@ textarea {
             }
             .artist-bank{
                 div{
-                    margin-top: 20%;
+                    margin-top: 7%;
                     margin-bottom: 20%;
                     text-align: center;
                     .featured-artists{
-                        width: 50%;
-                        margin-left: 25%;
-                        margin-right: 25%;
+                        width: 60%;
+                        margin-left: 20%;
+                        margin-right: 20%;
                         color: black;
                         background-color: white;
                         padding: 10px;
@@ -1114,9 +1114,10 @@ textarea {
             }
             p{
                 font-family: 'Rail', helvetica, sans-serif;
+                font-weight: 100;
                 line-height: 2;
                 padding-right: 5%;
-                font-size: 1.3em;
+                font-size: 1.2em;
                 padding-left: 5%;
                 text-align: center;
             }
@@ -1414,7 +1415,7 @@ textarea {
 
             .city-box{
                 width: 80%;
-                margin: 0 10% 60px 10%;
+                margin: 0 10% 0 10%;
 
             }
 
@@ -1439,7 +1440,7 @@ textarea {
                 }
             }
             .digital-section{
-                margin-top: 10%;
+                margin-top: 7%;
                .digital-box{
                     margin: 0 auto 60px auto;
                     .digital{
@@ -1456,13 +1457,13 @@ textarea {
             }
             .artist-bank{
                 div{
-                    margin-top: 20%;
+                    margin-top: 15%;
                     margin-bottom: 20%;
                     text-align: center;
                     .featured-artists{
-                        width: 50%;
-                        margin-left: 25%;
-                        margin-right: 25%;
+                        width: 70%;
+                        margin-left: 15%;
+                        margin-right: 15%;
                         color: black;
                         background-color: white;
                         padding: 10px;
@@ -1501,7 +1502,7 @@ textarea {
                 line-height: 2;
                 padding-right: 5%;
                 padding-left: 5%;
-                font-size: 1.3em;
+                font-size: 1.1em;
                 padding-left: 5%;
                 text-align: left;
             }
@@ -1809,7 +1810,7 @@ textarea {
             .cities{
                 display: block;
                 text-transform: uppercase;
-                font-size: 1.25em;
+                font-size: 1em;
                 padding-left: 5%;
                 padding-right: 5%;
                 word-spacing: 10px;
@@ -1849,11 +1850,10 @@ textarea {
                     text-align: center;
                     .featured-artists{
                         width: 50%;
-                        margin-left: 20%;
-                        margin-right: 20%;
+                        margin-left: 25%;
+                        margin-right: 25%;
                         color: white;
                         background-color: black;
-                        padding: 10px;
                         text-transform: uppercase;
                         border: 2px solid white;
                         &:hover{
@@ -1878,9 +1878,9 @@ textarea {
                 font-size: 1.5em;
                 font-family: 'Rail', 'Clan', helvetica, sans-serif;
                 border: 2px solid white;
-                width: 60%;
-                margin-left: 20%;
-                margin-right: 20%;
+                width: 40%;
+                margin-left: 30%;
+                margin-right: 30%;
             }
             p{
                 font-family: 'Rail', helvetica, sans-serif;
